# Airhockey

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  game.cpp  setup_env.sh
App/: CMakeLists.txt  framework.cpp  framework.hpp  game.cpp
App/config/: config.xml
App/parser/: CMakeLists.txt
App/parser/xml/: config_parser.cpp  config_parser.hpp
Assets/: README.md
core/: CMakeLists.txt  common.hpp
core/common/: limits.hpp
core/event/: event.hpp  event_manager.cpp  event_manager.hpp  game_event.hpp
core/game_objects/: game_object.cpp  game_object.hpp  hockey_puck.cpp  hockey_puck.hpp  hockey_striker.cpp  hockey_striker.hpp  physic_object.cpp  physic_object.hpp
engine/: CMakeLists.txt
engine/event/: event.hpp
engine/hitbox/: hitbox_2d.cpp  hitbox_2d.hpp
engine/logger/: logger.cpp  logger.hpp
engine/point/: point_2d.cpp  point_2d.hpp
engine/texture/: texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp
engine/vector/: vector_2d.cpp  vector_2d.hpp
engine/window/: window.cpp  window.hpp
engine/xml/: xml_loader.cpp  xml_loader.hpp
source/: CMakeLists.txt
source/libs/: cevent.cpp  cevent.hpp  cgame.cpp  cgame.hpp  cgameobj.cpp  cgameobj.hpp  cpreset.cpp  cpreset.hpp  cpresetmanager.cpp  cpresetmanager.hpp  ctext.cpp  ctext.hpp  cwindow.cpp  cwindow.hpp  сeventmanager.cpp  сeventmanager.hpp
source/pictures/: background.png~  ball.png~
